--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Permanent Marker', cursive;
 }
 
 body{
@@ -30,4 +33,28 @@ body{
     height: 100px;
     background-color: rgba(49, 80, 91, 0.503);
     overflow: hidden;
+}
+
+#message{
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    display: none;
+    background-color: #00000056;
+    text-transform: uppercase;
+    justify-content: center;
+    align-items: center;
+    word-spacing: 10px;
+    letter-spacing: 5px;
+    flex-direction: column;
+}
+
+.box{
+    background-color: white;
+    text-align: center;
+}
+
+img {
+    height: 300px;
+    width: 300px;
 }
