--- a/styles/style.css
+++ b/styles/style.css
@@ -58,3 +58,15 @@ img {
     height: 300px;
     width: 300px;
 }
+
+button{
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    border: none;
+    transform: translate(50%, 50%);
+}
+
+button:hover{
+    cursor: pointer
+}
